# pokemon-champions-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/config/: prompts.yaml
backend/routers/: data.py  prediction.py  recognition.py
backend/scripts/: debug_pokemon_list_scraper.py  debug_typechart.py  scrape_pokemon_list.py
backend/services/: data_manager.py  image_recognition.py
backend/src/: main.py
backend/src/application/state/: scraping_state.py
backend/src/application/use_cases/: predict_use_case.py  recognition_use_case.py  scrape_pokemon_list_use_case.py
backend/src/domain/entities/: llm_config.py  party.py  pokemon.py  prompt_config.py
backend/src/domain/repositories/: image_recognizer.py  llm_client.py  (+5 more)
backend/src/models/: party.py  pokemon.py
backend/src/routers/: data.py  party.py  recognition.py
backend/src/services/: ai_predictor.py  data_manager.py  scraper.py
backend/src/tests/: conftest.py  test_ai_predictor.py  test_data_manager.py  test_routers.py  test_scraper.py
backend/tests/: conftest.py  test_base_scraper.py  test_image_recognition.py  test_json_llm_config_repository.py  test_json_party_repository.py  test_json_pokemon_list_repository.py  test_json_usage_repository.py  test_litellm_client.py  test_llm_config.py  test_models.py  test_pokemon_list_scraper.py  test_predict_use_case.py  test_prompt_config.py  test_routers.py  test_scrape_pokemon_list_use_case.py  test_scraper.py  test_yaml_prompt_config_repository.py
(+84 files in other folders)
